--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -12,6 +12,11 @@ body {
     display: flex;
 }
 
+main{
+    width: 100%;
+    height: 100vh;
+}
+
 /*--------MENU--------*/
 .menu {
     display: flex;
@@ -77,4 +82,32 @@ main {
 
 .off{
     display: none;
+}
+
+.mainLoading{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.spinner-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
+}
+
+.spinner {
+  width: 40px;
+  height: 40px;
+  border: 4px solid #ccc;
+  border-top: 4px solid #6a0dad; /* cor da bolinha (roxa, opcional) */
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
 }
