--- a/assets/style/login.css
+++ b/assets/style/login.css
@@ -6,7 +6,7 @@
     body {
       margin: 0;
       padding: 0;
-      background-color: #f9fbff;
+      background-color: #37065a;
       display: flex;
       justify-content: center;
       align-items: center;
